test/integration/.configure-stress/plugin-configure-stress.json
{
  "directives_encoding": "gzip+base64",
  "directives_map": {
    "default": "H4sIAAAAAAACA7XbTU9bZxCG4X1/hcWGRU10Zt6Z98NSpaCGtJXSokIitSt0gk8MijlGPnaa/PuAgObZlLbSPFtkzViI+8KG8S/j5Xq/HGYvP+7fD3/1H46Ww4d+v95N350Pl2f79XAyrq7HYXY63n/h1fB+v3qzWb0ZPg3rWff0mNnZye/vTs7fXvx8cvzq5Ox88W4atkfHq2HczQ5e3t683m5uXl/fPW667Mdx2E5H+/sH9PcPmF4s+11/MDu4Xi6aJOm6+e1VPw0Lmd/20zQfN+vNar5bjJtxmE/D7lO/XRzuPr/ox81Nv/5yMV1utsPF7Vp++N4PD/5+RsdnP53f7d5+nk277TBNR7vNx2E86h4Xdd23Rfq/F8m/LxJYJMxFCouUuSjBosRcZLDImIscFjlzUYZFmbmowKLCXFRhUWUuarCoUYMFGoRLA9ggVBsEcBAqDgI6CFUHAR6EyoOAD0L1QQAIoQIh [...]
  },
  "default_directives": "default",
  "directives_stats": {
    "raw_bytes": 17990,
    "compressed_bytes": 1302,
    "score_rules": 120
  },
  "metric_labels": {
    "owner": "modsecurity-proxy-wasm",
    "identifier": "configure-stress"
  },
  "metrics": {
    "enabled": true,
    "per_rule_id": false,
    "rule_tags": false,
    "dual_prefix": false
  }
}
